Fix small layout bugs
 - add margin-left to labels
 - add border-spacing to tool
 - moved textures to images

--- a/src/less/tools/initialize.less
+++ b/src/less/tools/initialize.less
@@ -69,3 +69,7 @@ textarea {
 label {
   cursor: pointer;
 }
+
+input + label {
+  margin-left: 0.5em;
+}
